[tool.poetry]
name = "pumpfun-sol-website-tracker"
version = "0.1.0"
description = ""
authors = ["Justin Guese <guese.justin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
